Add JSFGermano2024 repository as submodule
- Reference implementation for TEIRV model and particle filter
- Clinical RT-PCR data from 6 COVID patients
- Gillespie solver and parameter estimation code
- Located in external/JSFGermano2024/ for easy reference
- Will inform our NPE implementation and provide validation data

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ workflows/
 results*/
 sbi-logs/
 
+# External submodules are tracked by .gitmodules
+# Their contents are managed separately
+
 # Python
 __pycache__/
 *.py[cod]
