--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ models/
 workflows/
 results*/
 sbi-logs/
+test_output/
 
 # External submodules are tracked by .gitmodules
 # Their contents are managed separately
